Spell check on isocenter.tex

--- a/Thesis/isocenter/isocenter.tex
+++ b/Thesis/isocenter/isocenter.tex
@@ -8,7 +8,7 @@ Modern MRI scanners have built-in distortion correction algorithms, that rely on
 
 Accurate knowledge of the gradient isocenter is essential to very accurate distortion correction methods, To our knowledge, existing distortion correction algorithms, both built-in and phantom based, make the assumption that the gradient isocenter coincides with the origin of the DICOM coordinates. This assumption may not be accurate and should not be used if a high degree of accuracy is necessary.
 
-The goal of this work was to develop and implement a numerical software-based method to estimate the gradient isocenter of the magnetic field inside an MRI scanner using the MRI scan of a custom-built phantom.  In our previous work~\cite{LSS06a,LSS06b,LSS08a,tlee_iaeng}, we used an oil filled plexiglas cube with
+The goal of this work was to develop and implement a numerical software-based method to estimate the gradient isocenter of the magnetic field inside an MRI scanner using the MRI scan of a custom-built phantom.  In our previous work~\cite{LSS06a,LSS06b,LSS08a,tlee_iaeng}, we used an oil filled plexiglass cube with
 159.50mm $\times$ 159.70mm $\times$ 158.11mm dimension that was designed to fit MR scanners that were available at that time.  Current MRI scanners have a significantly wider aperture, which necessitates a larger phantom to characterize the field distortion.  Furthermore, since the lower part of the scanner aperture is occupied by the scanner table, the scanning area occupied by the phantom or the patient is not centered on the gradient isocenter, making correction methods that assume that the phantom is centered with respect to the gradient isocenter~\cite{LSS06a,LSS06b,LSS08a,tlee_iaeng,simple_approach} obsolete and potentially inaccurate.
 
 \section{Distortion Phantom}
