Spell check on phantom_design

--- a/Thesis/phantom/phantom_design.tex
+++ b/Thesis/phantom/phantom_design.tex
@@ -94,7 +94,7 @@ up being almost completely flat.  Every feature was met, and it was also the mos
   \caption{\emph{(a) Paraffin wax at top with floatable silicon at bottom (b) Paraffin wax only (c) Machinable wax (d) Water weld (e) Silicon}}
 \end{figure}
 
-\section{Updated Desgin}
+\section{Updated Design}
 
 % \begin{figure}[htb]
 %   \begin{minipage}[b]{1in}
