final edit before first format review

--- a/Thesis/background/background.tex
+++ b/Thesis/background/background.tex
@@ -198,10 +198,10 @@ where $r'$ is the distorted coordinate vector derived from the undistorted vecto
   \end{bmatrix} 
 \end{equation}
 
-\section{Previous Work}
+% \section{Previous Work}
 
-Previous study was conducted using a 159.50mm × 159.70mm × 158.11mm oil phantom inside a 1.5 Tesla(T) 
-MRI scanner as shown in figure 
+% Previous study was conducted using a 159.50mm × 159.70mm × 158.11mm oil phantom inside a 1.5 Tesla(T) 
+% MRI scanner as shown in figure 
 
 % \begin{figure}[htb]
 %   \begin{minipage}[b]{2.75in}
