--- a/Thesis/data_extraction/ct_tank.tex
+++ b/Thesis/data_extraction/ct_tank.tex
@@ -177,7 +177,7 @@ edge from these regions. The following issues are need to be resolved:
 
 To detect the left and right boundary we plot the histogram of sum of intensities of each column across the
 region as well as the gradient for the intensity graph as shown in figure 
-\ref{fig:coronal_270_boundary_histogram}. 
+\ref{fig:coronal_boundaries_histogram}. 
 
 \begin{figure}[htb]
   \begin{minipage}[b]{3in}
@@ -206,7 +206,7 @@ region as well as the gradient for the intensity graph as shown in figure
 %   \label{fig:coronal_270_boundary_histogram}
 % \end{figure}
 
-Upper pair of arrows in figure \ref{fig:coronal_270_boundary_histogram} indicates where the inside edges of
+Upper pair of arrows in figure \ref{fig:coronal_boundaries_histogram}(a) indicates where the inside edges of
 the phantom tanks are, and the lower pair of arrows indicates how do those edges shows up in its gradient graph.
 The two small edges are identifiable with properties of value between 200 and 1000. We can identify them with
 this property for most of the slices. The transition from phantom tank to water become smoother on the slices
