--- a/Thesis/thesis.tex
+++ b/Thesis/thesis.tex
@@ -44,14 +44,28 @@
 \EmailAddress{caiz@csusb.edu}
 \Advisor{Keith Evan Schubert}
 \Committee*{Kay Zemoudeh}{Haiyan Qiao}{Reinhard Schulte}{}
-\CSUSBDate{July 2013}
+\CSUSBDate{September 2013}
 \Copyright
 
 \AbstractText{Magnetic Resonance Imaging (MRI) provides an excellent modality for distinguishing different tissues in the human body, which makes this modality essential for medical applications. MRI can also be used for treatment planning of medical procedures that require a great degree of geometrical accuracy such as functional radiosurgery. Unfortunately, the accuracy of MRI for medical targeting applications is compromised by the presence of geometric distortions such as non-linearities of the magnetic gradient fields or inhomogeneities of the scanner main field. \\
 	The goal of this work was to develop and implement a numerical software-based method to estimate the gradient isocenter of the magnetic field inside an 3-Tesla(T) MRI scanner using the MRI scan of a custom-built phantom.  A new phantom has been designed from scratch to capture the distortions inside 3T MRI scanner. Several algorithms have also been develop to calculate the gradient isocenter of the 3T MRI scanner's magnetic field, extract relevant data points from the MR and CT images of new phantom and compute the undistortion parameters.abstract contents}
 
-\AcknowledgementText{}
-\DedicationText{My father}
+\AcknowledgementText{
+I would like to take this opportunity to thank the individuals who played a crucial role in my college education.\\
+First and fore most, I would like to thank Dr. Schubert for giving me the oppportunity to work on the this
+project and tirelessly mentoring me during the time. Under his guidance, I have not only expanded my knowledge
+in mathematics and computer science area, I also have learned to be a better preson. Things I learned from him 
+will be benefitial to the rest of my life.\\
+I would also like to express my gratitude for Dr. Schulte, for patiently explaining things to me over and over 
+again and providing funding for the crucial updates for the new phantom. The time that I have spent with Dr. 
+Schulte has enabled me to greatly increase my knowledge in mathematics, physics, and radiation medicine. \\
+My thanks also goes to Bob Jones who build the new phantom for us. With very limited resource avaiable to him,
+he has done a tremendous job in making our new phantom design become a real thing. His input has been very 
+valuable to this project.\\
+At last, I would also like to thank to support from my family. Without them, especially my aunt, I would not
+have to opportunity to study in the USA, and certainly would not be able to study computer science at this
+point of my life.}
+\DedicationText{To Mom and Dad}
 
 \NoTables
 \NoFigures
