First review correction: added list of figures and list of tables

--- a/Thesis/thesis.tex
+++ b/Thesis/thesis.tex
@@ -67,8 +67,8 @@ have to opportunity to study in the USA, and certainly would not be able to stud
 point of my life.}
 \DedicationText{To Mom and Dad}
 
-\NoTables
-\NoFigures
+% \NoTables
+% \NoFigures
 
 \begin{document}
 \Thesis
