First review correction: added a blank page at the end of the manual script

--- a/Thesis/thesis.tex
+++ b/Thesis/thesis.tex
@@ -112,4 +112,9 @@ point of my life.}
 
 \bibliographystyle{plain}
 \bibliography{thesis}
+
+% Blank page at the end
+\newpage
+\thispagestyle{empty}
+\mbox{}
 \end{document}
