First review correction: Replaced acronym 'MRI' with it's full name 'Magnetic Resonance Imaging'.

--- a/Thesis/thesis.tex
+++ b/Thesis/thesis.tex
@@ -38,7 +38,7 @@
   \lstinputlisting[caption={#1},label={#2}]{#3}
 }
 
-\title{A New Phantom and Gradient Isocenter Estimation for MRI Distortion Correction}
+\title{A New Phantom and Gradient Isocenter Estimation for Magnetic Resonance Imaging Distortion Correction}
 \author{Zongqi Cai}
 \Department
 \EmailAddress{caiz@csusb.edu}
