First review correction: Fixed figure 6.1's margin problem (page 65).

--- a/Thesis/parameters/parameters_main.tex
+++ b/Thesis/parameters/parameters_main.tex
@@ -53,14 +53,14 @@ or should belong to the same column of tubes for calculating Y-axis correction p
 figure \ref{fig:correction_tube_pairing_xy} shows how the pairing is done for x, and y axis. 
 
 \begin{figure}[htb]
-  \begin{minipage}[b]{0.6\linewidth}
+  \begin{minipage}[b]{2.75in}
     \centering
-    \centerline{\mbox{\includegraphics[width=0.6\linewidth]{parameters/images/tubes_pairing_x.eps}}}
+    \centerline{\mbox{\includegraphics[width=2.75in]{parameters/images/tubes_pairing_x.eps}}}
     \centerline{\emph{(a)}}
   \end{minipage}
-  \begin{minipage}[b]{0.6\linewidth}
+  \begin{minipage}[b]{2.75in}
     \centering
-    \centerline{\mbox{\includegraphics[width=0.6\linewidth]{parameters/images/tubes_pairing_y.eps}}}
+    \centerline{\mbox{\includegraphics[width=2.75in]{parameters/images/tubes_pairing_y.eps}}}
     \centerline{\emph{(b)}}
   \end{minipage}
   \caption{\emph{Pairing of MR tubes. (a) Pairing for X-axis (b) Pairing for Y-axis}}
@@ -90,7 +90,7 @@ show the pairing.
   \begin{minipage}[b]{0.8\linewidth}
     \centering
     \centerline{\mbox{\includegraphics[width=0.8\linewidth]{parameters/images/surface_pairing_z.eps}}}
-    \centerline{\emph{(a)}}
+    % \centerline{\emph{(a)}}
   \end{minipage}
   \caption{\emph{Pairing of tank surfaces. }}
   \label{fig:correction_surface_pairing}
