--- a/Thesis/data_extraction/mri_tank.tex
+++ b/Thesis/data_extraction/mri_tank.tex
@@ -45,12 +45,12 @@ images, it can be described as follows:
     from left boundary to right boundary to analyze the histogram of each column, and pick the maximum peaks
     with the highest value as a edge point. As shown in figure ~\ref{fig:mri_edge_point_histograms}.
     \begin{figure}[htb]
-      \hfill
-      \begin{minipage}[b]{3in}
-        \centering
-        \centerline{\mbox{\includegraphics[width=3in]{data_extraction/images/MRI/find_edge_point.eps}}}
-      \end{minipage}
-      \hfill
+      \begin{center}
+        \begin{minipage}[b]{3in}
+          \centering
+          \centerline{\mbox{\includegraphics[width=3in]{data_extraction/images/MRI/find_edge_point.eps}}}
+        \end{minipage}
+      \end{center}
       \caption{\emph{Histogram for finding edge points}}
       \label{fig:mri_edge_point_histograms}
     \end{figure}
