--- a/Thesis/parameters/parameters_main.tex
+++ b/Thesis/parameters/parameters_main.tex
@@ -53,16 +53,18 @@ or should belong to the same column of tubes for calculating Y-axis correction p
 figure \ref{fig:correction_tube_pairing_xy} shows how the pairing is done for x, and y axis. 
 
 \begin{figure}[htb]
-  \begin{minipage}[b]{2.75in}
-    \centering
-    \centerline{\mbox{\includegraphics[width=2.75in]{parameters/images/tubes_pairing_x.eps}}}
-    \centerline{\emph{(a)}}
-  \end{minipage}
-  \begin{minipage}[b]{2.75in}
-    \centering
-    \centerline{\mbox{\includegraphics[width=2.75in]{parameters/images/tubes_pairing_y.eps}}}
-    \centerline{\emph{(b)}}
-  \end{minipage}
+  \begin{center}
+    \begin{minipage}[b]{2.6in}
+      \centering
+      \centerline{\mbox{\includegraphics[width=2.6in]{parameters/images/tubes_pairing_x.eps}}}
+      \centerline{\emph{(a)}}
+    \end{minipage}
+    \begin{minipage}[b]{2.6in}
+      \centering
+      \centerline{\mbox{\includegraphics[width=2.6in]{parameters/images/tubes_pairing_y.eps}}}
+      \centerline{\emph{(b)}}
+    \end{minipage}
+  \end{center}
   \caption{\emph{Pairing of MR tubes. (a) Pairing for X-axis (b) Pairing for Y-axis}}
   \label{fig:correction_tube_pairing_xy}
 \end{figure}
@@ -84,14 +86,16 @@ For each pairing, a new formula is produced.
 \section{Z Axis Distortion Correction Parameters Calculation}
 
 Similarly to xy correction, we pair up surfaces of water tanks. Figure \ref{fig:correction_surface_pairing}, 
-show the pairing.
+show the pairing. \\
 
 \begin{figure}[htb]
-  \begin{minipage}[b]{0.8\linewidth}
-    \centering
-    \centerline{\mbox{\includegraphics[width=0.8\linewidth]{parameters/images/surface_pairing_z.eps}}}
-    % \centerline{\emph{(a)}}
-  \end{minipage}
+  \begin{center}
+    \begin{minipage}[b]{3in}
+      \centering
+      \centerline{\mbox{\includegraphics[width=3in]{parameters/images/surface_pairing_z.eps}}}
+      % \centerline{\emph{(a)}}
+    \end{minipage}
+  \end{center}
   \caption{\emph{Pairing of tank surfaces. }}
   \label{fig:correction_surface_pairing}
 \end{figure}
