--- a/Thesis/phantom/phantom_design.tex
+++ b/Thesis/phantom/phantom_design.tex
@@ -34,8 +34,9 @@ these designs to allow scanning was prohibitive, requiring a complete redesign.
     \centerline{\mbox{\includegraphics[width=2.75in]{phantom/images/brain_storm/model2.eps}}}
     \centerline{\emph{(b) Second model}}
   \end{minipage}
+  \caption{\emph{Initial designs for new phantom}}
+  \label{fig:initial_phantom_design}
 \end{figure}
-
 
 \section{New Design}
 
